@@ -1910,11 +1910,19 @@ proc changePVSize { n } {
     if { $analysis(uci$n) } {
         # if the UCI engine was analysing, we have to stop/restart it to take into acount the new multiPV option
         if {$analysis(analyzeMode$n)} {
-            sendToEngine $n "stop"
-            set analysis(waitForBestMove$n) 1
-            vwait analysis(waitForBestMove$n)
+            # Normally the best move condition should still stand
+            # Meaning that we will stop the engine here and wait for
+            # the bestmove reply (which is handled in uci.tcl)
+            if { $analysis(waitForBestMove$n) } {
+                sendToEngine $n "stop"
+                vwait analysis(waitForBestMove$n)
+            }
             sendToEngine $n "setoption name MultiPV value $analysis(multiPVCount$n)"
             sendToEngine $n "position fen [sc_pos fen]"
+            # Although we go infinite, some engines do a bestmove announcement
+            # and go idle when they see a forced mate, before we stop them
+            # Let's anticipate this.
+            set analysis(waitForBestMove$n) 1
             sendToEngine $n "go infinite"
         } else  {
             sendToEngine $n "setoption name MultiPV value $analysis(multiPVCount$n)"
@@ -2308,6 +2316,10 @@ proc startAnalyzeMode {{n 1} {force 0}} {
         sendToEngine $n "isready"
         vwait analysis(waitForReadyOk$n)
         sendToEngine $n "position fen [sc_pos fen]"
+        # Although we go infinite, some engines do a bestmove announcement
+        # and go idle when they see a forced mate, before we stop them
+        # Let's anticipate this.
+        set analysis(waitForBestMove$n) 1
         sendToEngine $n "go infinite"
         set analysis(fen$n) [sc_pos fen]
         set analysis(maxmovenumber$n) 0
@@ -2704,10 +2716,18 @@ proc updateAnalysis {{n 1}} {
     if { $analysis(lockEngine$n) } { return }
     
     if { $analysis(uci$n) } {
-        sendToEngine $n "stop"
-        set analysis(waitForBestMove$n) 1
-        vwait analysis(waitForBestMove$n)
+        # Normally the best move condition should still stand
+        # Meaning that we will stop the engine here and wait for
+        # the bestmove reply (which is handled in uci.tcl)
+        if { $analysis(waitForBestMove$n) } {
+            sendToEngine $n "stop"
+            vwait analysis(waitForBestMove$n)
+        }
         sendToEngine $n "position fen [sc_pos fen]"
+        # Although we go infinite, some engines do a bestmove announcement
+        # and go idle when they see a forced mate, before we stop them
+        # Let's anticipate this.
+        set analysis(waitForBestMove$n) 1
         sendToEngine $n "go infinite"
         set analysis(fen$n) [sc_pos fen]
         set analysis(maxmovenumber$n) 0
